# ephys_compression_tests

./: .gitignore  test_wavpack_issue.py
.github/workflows/: benchmark.yml  deploy-gh-pages.yml
benchmark_results/: results.json
prepare_datasets/: .gitignore
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml
python/ephys_compression_tests/: __init__.py  _filters.py  cli.py  types.py
python/ephys_compression_tests/algorithms/: __init__.py
python/ephys_compression_tests/algorithms/ans/: __init__.py  ans.md  ar.py  ar_numba.py  lpc_numba.py
python/ephys_compression_tests/algorithms/blosc2/: __init__.py  blosc2.md
python/ephys_compression_tests/algorithms/lzma/: __init__.py  lzma.md
python/ephys_compression_tests/algorithms/wavpack/: __init__.py
python/ephys_compression_tests/algorithms/zlib/: __init__.py  zlib.md
python/ephys_compression_tests/datasets/: __init__.py
python/ephys_compression_tests/datasets/aind/: __init__.py  aind.md
python/ephys_compression_tests/datasets/aind_compression/: __init__.py  aind-compression.md
python/ephys_compression_tests/datasets/retina512/: __init__.py  retina512.md
python/ephys_compression_tests/datasets/vyom/: __init__.py
python/ephys_compression_tests/run_benchmarks/: __init__.py  _memobin.py  benchmark_timing.py  cache_management.py  collect_info.py  is_compatible.py  run_benchmarks.py  upload_benchmark_status.py  upload_dataset.py  upload_reconstructed.py
scripts/: run_benchmarks.py
web-ui/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
(+47 files in other folders)
